refact: tool 구조 리팩토링 Map -> dto구조로 리팩토링